# bammm

./: .gitignore  .pyproject.toml.swp  README.md  pyproject.toml
demo/: examples.py
dev/: bammm_dev.py
src/bammm/: bammm.py  bammm_local.py
src/bammm_ozika.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
