[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bammm-ozika"
version = "0.0.2"
authors = [
  { name="Ondrej Zika", email="author@example.com" },
]
description = "Bayesian model management"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ozika/bammm"
"Bug Tracker" = "https://github.com/ozika/bammm/issues"
